# PLT

./: README.md  language-pipeline.md  run-typst-test.sh
class/cs-3100/final-report/: README.md
class/engw-3302/: idea.md
class/engw-3302/lib/: main.typ  thoughts.md
docs/: curl.typ
docs/deep/: mover.sh  readme.md
java/rps/: RockPaper.java
ocaml/parser-lib/: 2  main.ml
plait/first-programs/code/: calc-lang.rkt  example.rkt  notes.md
plait/first-programs/from-lecture/: calc-lang.rkt  example.rkt
plait/first-programs/lesson-1/: README.md
plait/lambda/: example.rkt
theory/lc/: HM.md
theory/models/distributed_systems/: consistency.md
theory/polymorphism/: types-of-polymorphism.md
ts/algorithms/: package-lock.json  package.json
ts/algorithms/merge-sort/: merge-sort.ts
ts/algorithms/radix-sort/: radix-sort.ts
ts/fun/: :w  DFA.js  DFA.ts  package.json
ts/leetcode/: package-lock.json  package.json
ts/leetcode/217/: contains-duplicate.ts
ts/leetcode/5/: longest-palandromic-substring.ts
ts/leetcode/63/: unique-paths.ts
ts/let-lang/: package-lock.json  package.json  tsconfig.json
ts/let-lang/examples/: hello.sll
ts/let-lang/src/: ast.ts  evaluator.ts  index.ts  lexer.ts  parser.ts
ts/parser-lib/: package.json
ts/toy-language/: README.md  index.ts  package.json
ts/toy-language/core/: index.ts
videos/: .gitignore  README.md  pyproject.toml  render-all.sh
videos/common/: __init__.py  scene.py  style.py
videos/conditionals/: video.py
videos/functions/: video.py
videos/loops/: video.py
videos/variables/: video.py
(+26 files in other folders)
