[project]
name = "plt-videos"
version = "0.1.0"
description = "Manim video series for programming-language-theory concepts"
requires-python = ">=3.12,<3.13"
dependencies = [
    "manim>=0.18",
]

# Building `common` as a real package means `from common.style import ...`
# works from any module, regardless of which directory manim runs from.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
